--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-star-rating": "^7.0.0",
     "bootstrap": "^5.0.2",
     "font-awesome-icons": "^1.6.0",
     "ngx-toastr": "^19.0.0",
